--- a/frontend/src/registration/registration.css
+++ b/frontend/src/registration/registration.css
@@ -1,3 +1,11 @@
+/**
+ * Author : Bishal Karki // Isabella Breuhl 
+ * Discription:CSS file for registration page
+ * Created : 13 November 2024
+ * Last Modifies: 4  December 2024
+ *
+ * 
+ */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 .register-container {
