--- a/frontend/src/userDashboard/RegisteredProgram.css
+++ b/frontend/src/userDashboard/RegisteredProgram.css
@@ -1,3 +1,11 @@
+/**
+ * Author : Bishal Karki // Isabella Breuhl 
+ * Discription:CSS for registred program 
+ * Created : 13 November 2024
+ * Last Modifies: 4  December 2024
+ *
+ * 
+ */
 .registered-user-table {
     width: 100%;
     border-collapse: collapse;
