--- a/frontend/src/userDashboard/userDashboard.css
+++ b/frontend/src/userDashboard/userDashboard.css
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+/**
+ * Author : Bishal Karki // Isabella Breuhl 
+ * Discription:CSS file for userDashboard 
+ * Created : 13 November 2024
+ * Last Modifies: 4  December 2024
+ *
+ * 
+ */@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 .user-dashboard {
   font-family: 'Poppins', sans-serif;
@@ -15,8 +22,8 @@
 
 .header h1 {
   margin: 0;
-  font-size: 24px; 
-  font-weight: 600; /* Making the header bold using Poppins' weight */
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .logout-btn {
